--- a/Proiect ABD/App.config
+++ b/Proiect ABD/App.config
@@ -1,12 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Proiect_ABD.Properties.Settings.TabaraDeVaraConnectionString"
-            connectionString="Data Source=localhost;Initial Catalog=TabaraDeVara;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+        <add name="Proiect_ABD.Properties.Settings.TabaraDeVaraConnectionString" connectionString="Data Source=localhost;Initial Catalog=TabaraDeVara;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    <add name="TabaraDeVaraEntities" connectionString="metadata=res://*/TabaraDeVaraEF.csdl|res://*/TabaraDeVaraEF.ssdl|res://*/TabaraDeVaraEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TabaraDeVara;integrated security=True;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
